--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ nav a{
     font-weight: 600;
 } */
 
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -74,10 +74,10 @@ nav a{
 div{
     background-color: rgb(193, 60, 60);
     color: white;
-    /* margin: 20px; */
-    /* padding: 20px; */
-    /* padding-left: 20px;
-    padding-top: 20px; */
+    margin: 20px;
+    padding: 20px;
+    padding-left: 20px;
+    padding-top: 20px;
     padding: 20px 10px;
     height: 400px;
     width: 300px;
@@ -90,7 +90,7 @@ p{
 }
 
 nav{
-    /* padding: 10px; */
+    padding: 10px;
     margin-top: 30px;
 
 }
@@ -100,4 +100,243 @@ nav a{
     color: wheat;
     margin-right: 20px;
     font-size: 20px;
+} */
+
+
+/* Display Types */
+
+/* *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+div{
+    background-color: red;
+    color: white;
+    font-size: 30px;
+}
+
+span{
+    background-color: blue;
+    color: white;
+    font-size: 20px;
+} */
+
+
+/* .x{
+    background-color: yellow;
+    padding: 20px;
+    display: inline-block;
+} */
+
+
+/* body{
+    font-family: 'Courier New', Courier, monospace;
+    padding: 20px;
+}
+
+h1{
+    margin-top: 40px;
+}
+
+
+.box{
+    background-color: teal;
+    color: white;
+    padding: 10px;
+    margin: 10px 0px;
+    width: 200px;
+    height: 60px;
+    text-align: center;
+    line-height: 60px;
+}
+
+.block{
+    display: block;
+    background-color: teal;
+}
+
+.inline{
+    display: inline;
+}
+
+.inline-block{
+    display: inline-block;
+} */
+
+/* .border-x{
+    border-width: 5px;
+    border-color: red
+    border-style: solid;
+
+    border-radius: 5px;
+} */
+
+
+/* .border-x{
+    width: 300px;
+    height: 300px;
+    background-color: red;
+    color: white;
+    border: 2px solid rgb(97, 97, 157);
+    border-radius: 10px;
+    box-shadow: 4px 4px 12px rgba(0,0,0,0.3);
+    box-shadow: 0 0 5px rgb(109, 109, 191);
+    text-align: center;
+    overflow: visible;
+    overflow: hidden;
+    overflow: scroll;
+}
+
+p{
+    text-shadow: 0px 0px 5px #00f;
+} */
+
+/* .box{
+    position: static;
+} */
+
+
+/* body{
+    font-family: Arial, Helvetica, sans-serif;
+    height: 4000px;
+    padding: 20px;
+}
+
+h2{
+    margin-top: 60px;
+}
+.container{
+    border: 2px dashed #999;
+    padding: 20px;
+    height: 200px;
+    margin-bottom: 50px;
+    position: relative;
+}
+
+
+.box{
+    width: 120px;
+    height: 60px;
+    background-color: #4f46e5;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+
+.static{
+    position: static;
+    top: 100px;
+    left: 100px;
+}
+
+.relative{
+    position: relative;
+    top: 50px;
+    left: 250px;
+    background-color: teal;
+}
+
+.absolute{
+    position: absolute;
+    top: 20px;
+    left: 300px;
+    background-color: orange;
+}
+
+.sticky{
+    position: sticky;
+    top: 0;
+}
+
+.fixed{
+    position: fixed;
+    top: 20px;
+    right: 50%;
+    background-color: crimson;
+} */
+
+/* z-index */
+/* body{
+    position: relative;
+}
+
+.box{
+    position: absolute;
+    width: 320px;
+    height: 320px;
+    color: white;
+    font-weight: bold;
+    font-size: 40px;
+
+}
+
+.red{
+    background-color: red;
+    top: 20px;
+    left: 20px;
+    z-index: 4;
+}
+
+.green{
+    background-color: green;
+    top: 40px;
+    left: 40px;
+    z-index: 5;
+}
+
+.blue{
+    background-color: blue;
+    top: 60px;
+    left: 60px;
+    z-index: 6;
+} */
+
+/* flex */
+.box{
+    width: 200px;
+    height: 200px;
+}
+
+.box-1{
+    background-color: purple;
+}
+
+.box-2{
+    background-color: orange;
+}
+
+.box-3{
+    background-color: brown;
+}
+
+.box-4{
+    background-color: pink;
+}
+
+.box-5{
+    background-color: gray;
+}
+
+.container{
+    background-color: lime;
+    height: 800px;
+    display: flex;
+    flex-direction: row;
+    flex-direction: column;
+    flex-direction: row-reverse;
+    flex-direction: column-reverse;
+    flex-direction: row;
+    /* gap: 10px; */
+    justify-content: center;
+    justify-content: flex-start;
+    justify-content: space-around;
+    justify-content: space-between;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
 }
